Firther modularisation; use exceptions to propagate failures
Exceptions are not really necessary at the moment, but numerous exit()s across half a dozen files started freaking me out. Also: my favourite game, renamings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,9 +45,11 @@ add_subdirectory(yaml-cpp)
 
 list(APPEND api_generator_SRCS
     main.cpp
-        generator.cpp
-    swagger_analyzer.cpp
+    translator.cpp
+    analyzer.cpp
     scope.cpp
+    model.cpp
+    exception.cpp
 )
 
 add_executable(api-generator ${api_generator_SRCS})
