Many changes towards v. 0.1 that would generate proper code for calls that get all params in the API path and have no response
Among changes: support (rather, don't fail on) files from definitions/; insert necessary #includes; generate functions instead of classes if there's no response defined (meaning all calls atm); further modularization.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ list(APPEND api_generator_SRCS
     scope.cpp
     model.cpp
     exception.cpp
+    printer.cpp
 )
 
 add_executable(api-generator ${api_generator_SRCS})
