Better types support; soft-wrapping; osrcfstream
* Analyzer matches Swagger types more precisely (actually even
overkilling the set of types used in the Matrix spec).
* Offsetting code and state has been moved out to the dedicated stream
type, osrcfstream (no more _levels[] map).
* WrappedLine class introduced that encapsulates a line of code that is
wrapped if the next segment between special wrap stops (designated by
soft_endl struct) spills over a certain margin (80 chars by default).
* Usual fun with renaming.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,13 +44,13 @@ option(YAML_CPP_BUILD_CONTRIB "Enable contrib stuff in library" OFF)
 add_subdirectory(yaml-cpp)
 
 list(APPEND api_generator_SRCS
-    main.cpp
-    translator.cpp
-    analyzer.cpp
-    scope.cpp
-    model.cpp
-    exception.cpp
-    printer.cpp
+        main.cpp
+        translator.cpp
+        analyzer.cpp
+        formatting.cpp
+        model.cpp
+        exception.cpp
+        printer.cpp
 )
 
 add_executable(api-generator ${api_generator_SRCS})
