Drop the 'api' target from CMakeLists.txt
It's (been) hardwired to Matrix too.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.11) # Maybe works with even older versions
 
-project(matrix-csapi-generator)
+project(api-generator)
 enable_language(CXX)
 
 include(CheckCXXCompilerFlag)
@@ -29,7 +29,7 @@ set(CMAKE_AUTOMOC OFF)
 
 message( STATUS )
 message( STATUS "=============================================================================" )
-message( STATUS "                       matrix-csapi-generator Build Information" )
+message( STATUS "                       api-generator Build Information" )
 message( STATUS "=============================================================================" )
 if (CMAKE_BUILD_TYPE)
     message( STATUS "Build type: ${CMAKE_BUILD_TYPE}")
@@ -56,28 +56,3 @@ list(APPEND api_generator_SRCS
 add_executable(api-generator ${api_generator_SRCS})
 target_include_directories(api-generator PRIVATE yaml-cpp/include)
 target_link_libraries(api-generator Qt5::Core yaml-cpp)
-
-set (API_YAML_DIR "${PROJECT_SOURCE_DIR}/matrix-doc/api/client-server"
-    CACHE STRING "Path to CS API files in Swagger format")
-set (GENERATED_API_DIR "${PROJECT_BINARY_DIR}/api"
-    CACHE STRING "Path to directory with generated C++ API files")
-
-file(GLOB_RECURSE API_YAML_FILES RELATIVE "${PROJECT_SOURCE_DIR}" "${API_YAML_DIR}/*.yaml")
-list(FILTER API_YAML_FILES EXCLUDE REGEX "/(old_sync|room_initial_sync)\\.")
-list(LENGTH API_YAML_FILES API_SIZE)
-
-foreach(_yaml_file ${API_YAML_FILES})
-    get_filename_component(_f ${_yaml_file} NAME_WE)
-    set(_cppfile ${GENERATED_API_DIR}/${_f}.cpp)
-    add_custom_command(
-        OUTPUT ${_cppfile}
-        COMMAND api-generator --out ${GENERATED_API_DIR} ${_yaml_file}
-        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-        MAIN_DEPENDENCY ${_yaml_file}
-        DEPENDS api-generator
-        COMMENT Generating C++ stubs for ${_yaml_file}
-    )
-
-    list(APPEND generated_SRCS ${_cppfile})
-endforeach()
-add_custom_target(api DEPENDS ${generated_SRCS})
