Added kainjow/Mustache as a templating engine and yaml-cpp wrappers
yaml-cpp wrappers are the next step after assert() and get() methods in Analyzer. Updated yaml-cpp along the way.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ message( STATUS )
 option(YAML_CPP_BUILD_TOOLS "Enable testing and parse tools" OFF)
 option(YAML_CPP_BUILD_CONTRIB "Enable contrib stuff in library" OFF)
 add_subdirectory(yaml-cpp)
+add_subdirectory(mustache)
 
 list(APPEND api_generator_SRCS
         main.cpp
@@ -51,6 +52,7 @@ list(APPEND api_generator_SRCS
         model.cpp
         exception.cpp
         printer.cpp
+        yaml.cpp
 )
 
 add_executable(api-generator ${api_generator_SRCS})
