--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/jbeder/yaml-cpp.git
 [submodule "mustache"]
 	path = mustache
-	url = https://github.com/kainjow/Mustache.git
+	url = https://github.com/KitsuneRal/Mustache.git
