--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,27 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
+    - sourceline: 'ppa:beineri/opt-qt563-trusty'
     packages:
     - g++-5
     - gdb # For debugging
-    - qt5-default
+    - qt57-meta-minimal
 
 matrix:
   include:
   - os: linux
     compiler: gcc
-    env: [ ENV_EVAL="CC=gcc-5 && CXX=g++-5" ]
+    env: [ 'ENV_EVAL="CC=gcc-5 && CXX=g++-5"' ]
   - os: linux
     compiler: clang
   - os: osx
-    env: [ ENV_EVAL="brew update && brew install qt5" CMAKE_PREFIX_PATH=/usr/local/opt/qt" ]
+    env: [ 'ENV_EVAL="brew update && brew install qt5 && PATH=/usr/local/opt/qt/bin"' ]
 
 install:
 - eval "${ENV_EVAL}"
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then . /opt/qt56/bin/qt57-env.sh; fi
 
 script:
 - mkdir build && cd build
-- cmake -DCMAKE_PREFIX_PATH="${CMAKE_PREFIX_PATH}" ..
+- cmake ..
 - cmake --build .
