--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,19 +1,19 @@
-image: Visual Studio 2015
+image: Visual Studio 2017
 
 environment:
   DEPLOY_DIR: gtad-%APPVEYOR_BUILD_VERSION%
   matrix:
-  - QTDIR: C:\Qt\5.9\msvc2015_64
-    VS_FOLDER: Microsoft Visual Studio 14.0
+  - QTDIR: C:\Qt\5.9\msvc2017_64
+    VCVARS: "vcvars64.bat"
     PLATFORM: x64
-  - QTDIR: C:\Qt\5.6\msvc2015
-    VS_FOLDER: Microsoft Visual Studio 14.0
+  - QTDIR: C:\Qt\5.9\msvc2017
+    VCVARS: "vcvars32.bat"
     PLATFORM: x86
 
 init:
 - call "%QTDIR%\bin\qtenv2.bat"
 - set PATH=C:\Qt\Tools\QtCreator\bin;%PATH%
-- call "%ProgramFiles(x86)%\%VS_FOLDER%\VC\vcvarsall.bat" %platform%
+- call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\VC\\Auxiliary\\Build\\%VCVARS%" %PLATFORM%
 - cd /D "%APPVEYOR_BUILD_FOLDER%"
 
 before_build:
