--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
   - os: linux
     compiler: clang
   - os: osx
+    osx_image: xcode11
     addons:
       homebrew:
         update: true
