--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,6 @@
 image: Visual Studio 2017
 
 environment:
-  DEPLOY_DIR: gtad-%APPVEYOR_BUILD_VERSION%
   CMAKE_ARGS: '-G "NMake Makefiles JOM"'
   matrix:
   - QTDIR: C:\Qt\5.9\msvc2017_64
@@ -20,14 +19,14 @@ init:
 before_build:
 - git submodule update --init --recursive
 - mkdir build && cd build
-- cmake %CMAKE_ARGS% -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX="%DEPLOY_DIR%" ..
+- cmake %CMAKE_ARGS% -DCMAKE_BUILD_TYPE=RelWithDebInfo ..
 
 build_script:
 - cmake --build .
 
 after_build:
-- cmake --build . --target install
-- 7z a gtad.zip "%DEPLOY_DIR%\"
+- cd .. # To gtad sources directory
+- 7z a gtad.zip build\gtad.exe
 
 before_test:
 - cd ..
@@ -37,7 +36,7 @@ before_test:
 
 test_script:
 - cd ..\libQuotient
-- cmake %CMAKE_ARGS% -DMATRIX_DOC_PATH="../matrix-doc" -DGTAD_PATH="../gtad/%DEPLOY_DIR%/gtad" .
+- cmake %CMAKE_ARGS% -DMATRIX_DOC_PATH="../matrix-doc" -DGTAD_PATH="../gtad/build/gtad" .
 - cmake --build . --target update-api
 - cmake --build . --target all
 - cd ..\gtad
