Require CMake 3.8 everywhere
CMakeLists mentioned 3.1; README said about 3.10. Actually, the oldest
CMake version that knows about C++17 is 3.8.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1) # Maybe works with even older versions
+cmake_minimum_required(VERSION 3.8) # Older ones don't know about C++17
 
 project(gtad CXX)
 
