--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,20 +31,23 @@ else ()
     endforeach ()
 endif ()
 
-find_package(Qt5 5.7 REQUIRED Core)
-get_filename_component(Qt5_Prefix "${Qt5_DIR}/../../../.." ABSOLUTE)
+find_package(Qt6 COMPONENTS Core)
+if (Qt6_FOUND)
+    get_filename_component(Qt_Prefix "${Qt6_DIR}/../../../.." ABSOLUTE)
+else()
+    find_package(Qt5 5.15 REQUIRED Core)
+    get_filename_component(Qt_Prefix "${Qt5_DIR}/../../../.." ABSOLUTE)
+endif()
 set(CMAKE_AUTOMOC OFF)
 
 message( STATUS )
-message( STATUS "=============================================================================" )
-message( STATUS "                       GTAD Build Information" )
-message( STATUS "=============================================================================" )
+message( STATUS "== GTAD build configuration summary ==" )
+message( STATUS )
 if (CMAKE_BUILD_TYPE)
     message( STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 endif(CMAKE_BUILD_TYPE)
 message( STATUS "Using compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}" )
-message( STATUS "Using Qt ${Qt5_VERSION} at ${Qt5_Prefix}" )
-message( STATUS "=============================================================================" )
+message( STATUS "Using Qt ${Qt_VERSION} at ${Qt_Prefix}" )
 message( STATUS )
 
 option(YAML_CPP_BUILD_TESTS "Enable yaml-cpp tests" OFF)
@@ -65,7 +68,7 @@ list(APPEND SRCS
 
 add_executable(${CMAKE_PROJECT_NAME} ${SRCS})
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE yaml-cpp/include)
-target_link_libraries(${CMAKE_PROJECT_NAME} Qt5::Core yaml-cpp ${std_fs_lib})
+target_link_libraries(${CMAKE_PROJECT_NAME} Qt::Core yaml-cpp)
 
 install(TARGETS ${CMAKE_PROJECT_NAME}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
